<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.uco.rconyac1.magiccompanion.DiceRollerActivity"
    android:orientation="vertical"
    android:background="#000000"
    >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/current_roll_title"
        android:textColor="#D1A319"
        android:gravity="center"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:text=""
        android:id="@+id/diceRollValue"
        android:gravity="center"
        android:textSize="50dp"
        android:textColor="#D1A319" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:weightSum="2">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dice_instructions"
                android:textColor="#D1A319"
                android:textStyle="bold|italic" />

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dice_type_list_view"
                android:layout_marginRight="5dp"></ListView>







        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roll_history_title"
                android:textColor="#D1A319"
                android:textStyle="bold|italic" />

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/history_view"></ListView>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
